--- a/view/adminhtml/layout/hawksama_notification_new.xml
+++ b/view/adminhtml/layout/hawksama_notification_new.xml
@@ -7,9 +7,5 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <body>
-        <referenceContainer name="content">
-            <uiComponent name="notice_form"/>
-        </referenceContainer>
-    </body>
+    <update handle="hawksama_notification_edit"/>
 </page>
