--- a/view/frontend/templates/cart/notification-attribute.phtml
+++ b/view/frontend/templates/cart/notification-attribute.phtml
@@ -11,7 +11,7 @@ use Magento\Framework\View\Element\Template;
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
 use Magento\Framework\Escaper;
-use Hawksama\Notice\ViewModel\NotificationViewModel;
+use Hawksama\ProductRuleNotifier\ViewModel\NotificationViewModel;
 
 /**
  * @var Template $block
