--- a/view/frontend/layout/checkout_cart_index.xml
+++ b/view/frontend/layout/checkout_cart_index.xml
@@ -9,9 +9,9 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="checkout.cart.form.before">
-            <block class="Magento\Framework\View\Element\Template" name="cart.notifications" template="Hawksama_ProductRuleNotifier::cart/notification-attribute.phtml">
+            <block class="Magento\Framework\View\Element\Template" name="cart.notifications" template="Hawksama_HyvaProductRuleNotifier::cart/notification-attribute.phtml">
                 <arguments>
-                    <argument name="view_model" xsi:type="object">Hawksama\ProductRuleNotifier\ViewModel\NotificationViewModel</argument>
+                    <argument name="view_model" xsi:type="object">Hawksama\HyvaProductRuleNotifier\ViewModel\NotificationViewModel</argument>
                 </arguments>
             </block>
         </referenceContainer>
